tdf#164748 writerfilter: fix missing even/odd header properties

Lots of header/footer page style properties are ignored
if the header/footer is not first enabled.
So copying propertyList MUST follow completeCopyHeaderFooter()
[which is where all those settings are turned on].

However, copying properties AFTER turning on the header/footer
was Exception'ing when trying to copy
BottomMarginComplexColor as void().

So ignore any property-copy errors,
and then everything should work in theory...
...and it seems to.

make CppunitTest_sw_core_header_footer \
    CPPUNIT_TEST_NAME=testBnc519228OddBreaks

make CppunitTest_sw_rtfexport8 \
    CPPUNIT_TEST_NAME=testTdf160976_headerFooter

Change-Id: Iecf0a070e77525c04b44c4fc38efa0f9d558eca5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180417
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180428
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>